Add SELL_LATER strategy