@@ -1,5 +1,6 @@
 package com.ozgen.telegrambinancebot.repository;
 
+import com.ozgen.telegrambinancebot.model.TradingStrategy;
 import com.ozgen.telegrambinancebot.model.telegram.TradingSignal;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -33,7 +34,6 @@ public class TradingSignalRepositoryTest {
         signal1.setStopLoss("50000");
         signal1.setEntryStart("5000");
         signal1.setEntryEnd("50000");
-        signal1.setTakeProfits(List.of());
         signal1.setCreatedAt(new Date());
         entityManager.persist(signal1);
 
@@ -42,20 +42,19 @@ public class TradingSignalRepositoryTest {
         signal2.setStopLoss("4000");
         signal1.setEntryStart("5000");
         signal1.setEntryEnd("50000");
-        signal1.setTakeProfits(List.of("50000"));
         signal2.setCreatedAt(new Date(System.currentTimeMillis() - 100000000)); // Date in the past
         entityManager.persist(signal2);
     }
 
     @Test
     public void testFindAllByIdIn() {
-        List<TradingSignal> signals = tradingSignalRepository.findAllByIdIn(Arrays.asList(signal1.getId(), signal2.getId()));
+        List<TradingSignal> signals = tradingSignalRepository.findAllByIdInAndStrategyIn(Arrays.asList(signal1.getId(), signal2.getId()), List.of(TradingStrategy.DEFAULT));
         assertThat(signals).containsExactlyInAnyOrder(signal1, signal2);
     }
 
     @Test
     public void testFindAllByCreatedAtAfterAndIsProcessedIn() {
-        List<TradingSignal> signals = tradingSignalRepository.findAllByCreatedAtAfterAndIsProcessedIn(new Date(System.currentTimeMillis() - 50000000), Arrays.asList(0, 1)); // Assuming 0 and 1 are valid process statuses
+        List<TradingSignal> signals = tradingSignalRepository.findAllByCreatedAtAfterAndIsProcessedInAndStrategyIn(new Date(System.currentTimeMillis() - 50000000), Arrays.asList(0, 1), List.of(TradingStrategy.DEFAULT)); // Assuming 0 and 1 are valid process statuses
         assertThat(signals).contains(signal1);
     }
 }
